--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linear Form</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -310,7 +310,7 @@
         <p>Submitted by: Cyanne Justin Vega</p>
     </footer>
     
-      <script src="script.js"></script>
+      <script src="assets/js/script.js"></script>
       <script>
   const modal = document.getElementById('modal');
   const openModalBtn = document.getElementById('openModalBtn');
