--- a/ws2.1.html
+++ b/ws2.1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -145,7 +145,7 @@
         <p>Submitted by: Cyanne Justin Vega</p>
     </footer>
     
-      <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 </html>
